namespace-and-network-policy/pod.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: new-nginxpod
  namespace: dev
  labels:   
    app: myapp 
spec: 
    containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort : 80
              protocol : TCP
              name: nginx
              
---
apiVersion: v1
kind: Pod 
metadata: 
  name: new-tomcatpod
  namespace: ops
  labels:   
    app: myapp 
spec: 
    containers:
        - name: tomcat
          image: tomcat:latest
          ports:
            - containerPort : 8080
              protocol : TCP
              name: tomcat
