namespace-and-network-policy/sevice.yml
apiVersion: v1 
kind: Service
metadata:
    name: new-nginxservice
    namespace:  dev
spec: 
    type: NodePort
    selector: 
      app: myapp
    ports: 
        - port: 80 
          targetPort: 80
          protocol: TCP 

---
apiVersion: v1 
kind: Service
metadata:
    name: new-tomcatservice
    namespace:  ops
spec: 
    type: NodePort
    selector: 
      app: myapp
    ports: 
        - port: 8080 
          targetPort: 8080
          protocol: TCP
