namespace-and-network-policy/deny-network-policies.yml
# Deny all ingress traffic in the dev namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
# Deny all ingress traffic in the ops namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: ops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
